<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10sp"
    android:layout_marginBottom="10sp"
    android:background="@drawable/shape_rv_search_home_style"
    android:elevation="2sp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="20dp">
    
    <ImageView
        android:id="@+id/my_lease_img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp" />
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/my_lease_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_rv_room_default"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/my_lease_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/my_lease_default_date"
            android:textColor="@color/grey"
            android:textSize="13sp" />
        
        <!-- 签约状态 -->
        <TextView
            android:id="@+id/my_lease_status"
            style="@style/TextStatusStyle"
            android:layout_gravity="bottom"
            android:layout_marginBottom="25dp"
            android:background="@drawable/shape_status_green"
            android:text="@string/my_lease_default_status_2" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/my_lease_rent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/my_lease_default_rent"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold" />
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="2"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">
                
                <!-- 续约 -->
                <Button
                    android:id="@+id/my_lease_renewal"
                    style="@style/LabelInfoStyle"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/my_lease_default_renewal"
                    android:textSize="12sp"
                    android:visibility="gone" />
                
                <!-- 提前退租 -->
                <Button
                    android:id="@+id/my_lease_refund"
                    style="@style/RefundInfoStyle"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/my_lease_default_refund"
                    android:textSize="12sp"
                    android:visibility="gone" />
                
                <!-- 修改 -->
                <Button
                    android:id="@+id/my_lease_revise_or_confirm"
                    style="@style/LabelInfoStyle"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/my_lease_default_edit"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    
    </FrameLayout>
</LinearLayout>