<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20sp"
    android:layout_marginVertical="5dp"
    android:background="@drawable/shape_rv_search_home_style"
    android:elevation="2sp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="10sp"
    tools:ignore="RtlSymmetry">
    
    <ImageView
        android:id="@+id/room_img"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="10dp" />
    
    <FrameLayout
        android:id="@+id/item_info_group"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/room_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_rv_room_default"
            android:textColor="@color/icon_or_text"
            android:textSize="18sp"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/room_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:text="@string/search_rv_region_default"
            android:textColor="#BFAEA5"
            android:textSize="13sp" />
        
        <TextView
            android:id="@+id/room_history_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/search_rv_time_default"
            android:textColor="#BFAEA5"
            android:textSize="13sp"
            android:visibility="gone" />
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_apartment_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:orientation="horizontal"
            android:visibility="gone" />
        
        <LinearLayout
            android:id="@+id/ya_item_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/search_item_room_rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_rv_rent_default"
                android:textColor="@color/red"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>